[package]
name = "actix-gcd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# get crates from crates.io

[dependencies]
actix-web = "4.1" 
# get serde plus derive feature
serde = {version = "1.0", features = ["derive"]}
